<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hospitalhealthcare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hospitalhealthcare.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hospitalhealthcare.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.hospitalhealthcare.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />


    <fragment
        android:id="@+id/nav_policy"
        android:name="com.example.hospitalhealthcare.PolicyFragment"
        android:label="Privacy and policy"
        tools:layout="@layout/fragment_policy" />
    <fragment
        android:id="@+id/book_appointment2"
        android:name="com.example.hospitalhealthcare.Book_appointment2"
        android:label="Book Appointment"
        tools:layout="@layout/fragment_book_appointment2" />
    <fragment
        android:id="@+id/myprescription"
        android:name="com.example.hospitalhealthcare.Myprescription"
        android:label="my Prescription panel"
        tools:layout="@layout/myprescription_fragment" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.hospitalhealthcare.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.hospitalhealthcare.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />



</navigation>